# fluidaudio-rs

./: Cargo.toml  Package.resolved  Package.swift  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
examples/: demo.rs  transcribe.rs
src/: lib.rs
src/ffi/: bridge.rs  mod.rs
swift/: CoreMLBridge.swift  CoreMLPredictorBridge.swift  FluidAudioBridge.swift
